# tetros

./: .gitignore  Cargo.toml  base-block.xcf  block.ppm
blocks/: blue.ppm  cyan.ppm  green.ppm  grey.ppm  orange.ppm  purple.ppm  red.ppm  yellow.ppm
src/: graphical.rs  lib.rs  main.rs
src/resc/: block
